--- a/prebuilt/common/etc/init.local.rc
+++ b/prebuilt/common/etc/init.local.rc
@@ -1,5 +1,4 @@
 # CyanogenMod Extras
-import /init.superuser.rc
 
 on init
     export ANDROID_CACHE /cache
@@ -211,3 +210,19 @@ on property:sys.io.scheduler=bfq
     write /sys/block/sde/queue/iosched/slice_idle 0
     write /sys/block/dm-0/queue/iosched/slice_idle 0
 
+# su daemon
+service su_daemon /system/xbin/su --daemon
+    disabled
+    seclabel u:r:sudaemon:s0
+
+on property:persist.sys.root_access=0
+    stop su_daemon
+
+on property:persist.sys.root_access=1
+    start su_daemon
+
+on property:persist.sys.root_access=2
+    start su_daemon
+
+on property:persist.sys.root_access=3
+    start su_daemon
