--- a/QSthemes/QStileCosmos/AndroidManifest.xml
+++ b/QSthemes/QStileCosmos/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.systemui.qstile.squircle"
+    package="com.android.systemui.qstile.cosmos"
     android:versionCode="1"
     android:versionName="1.0">
     <overlay android:targetPackage="com.android.systemui" android:priority="1"/>
 
-    <application android:label="QStilesSquircle" android:hasCode="false"/>
+    <application android:label="Shishu Cosmos" android:hasCode="false" />
 </manifest>
