--- a/QSthemes/QStileTearDrop/AndroidManifest.xml
+++ b/QSthemes/QStileTearDrop/AndroidManifest.xml
@@ -4,5 +4,5 @@
     android:versionName="1.0">
     <overlay android:targetPackage="com.android.systemui" android:priority="1"/>
 
-    <application android:label="@string/qstile_tear_drop" android:hasCode="false"/>
+    <application android:label="QStilesTearDrop" android:hasCode="false"/>
 </manifest>
